스케쥴링, 로그 남기기

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.database=mysql
 
 openweathermap.key=c6280b09761928352e61cf92d2a426e4
 ###################################################
+
+logging.config=classpath:logback-spring.xml
