swagger api 문서 남기기

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,7 @@ spring.datasource.password=root
 spring.jpa.show-sql=true
 spring.jpa.database=mysql
 
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 ###################################################
 ### ?? ?? ###
@@ -13,4 +14,4 @@ spring.jpa.database=mysql
 openweathermap.key=c6280b09761928352e61cf92d2a426e4
 ###################################################
 
-logging.config=classpath:logback-spring.xml
+##logging.config=classpath:logback-spring.xml
